添加完毕 生词本标签-可以添加-不可删除

--- a/words_discoverer_chrome/popup.html
+++ b/words_discoverer_chrome/popup.html
@@ -172,6 +172,19 @@
     <span class="rateInfo" id="addOpResult"></span>
     </fieldset>
     <br>
+
+    <fieldset>
+      <div class="rateNotHandledInfo">__MSG_vocabNotHandleSizeInfo1__ <span class="indicator" id="vocabNotHandledIndicator">n/a</span> __MSG_vocabSizeInfo2__</div>
+      <button class="vocabButton" id="showNotHandledVocab">__MSG_showVocab__</button>
+      <br>
+      <br>
+      <span class="rateNotHandledInfo">__MSG_tipInfo__</span>
+      <br>
+      <input type="text" id="addNotHandledText"><button class="addNotHandledButton" id="addNotHandledWord"><img src="add.png"></button>
+      <br>
+      <span class="rateInfo" id="addNotHandledOpResult"></span>
+    </fieldset>
+    <br>
     <fieldset>
     <button class="vocabButton" id="adjust">__MSG_adjust__</button>
     <button class="helpButton" id="getHelp">?</button>
