popup windows  高度调节无效 chrome限制窗体最大高度

--- a/words_discoverer_chrome/popup.html
+++ b/words_discoverer_chrome/popup.html
@@ -6,6 +6,9 @@
         background-color: rgb(255,248,220);
         min-width: 320px;
         max-width: 320px;
+        /*popup 有最大高度 chrome定义的*/
+
+
     }
     fieldset {
         background-color: orange;
