一键删除完成

--- a/words_discoverer_chrome/displayNotHandle.html
+++ b/words_discoverer_chrome/displayNotHandle.html
@@ -23,6 +23,9 @@
 </head>
 <body>
 
+<div id="deleteAllDiv" style="background: aqua;right: 20%;float: right" title="delete all world don't click">
+    <button class="deleteButton" id="deleteAllButton" style="background: cornflowerblue; color: white"><img src="deleteall.png" style="max-width: 55px;max-height: 55px">  DELETE ALL, CAREFULE CLICK,删除所有谨慎点击</button>
+</div>
 <div id="vocabularyNeedLearnSection">
 </div>
 
