--- a/words_discoverer_chrome/displayNotHandle.html
+++ b/words_discoverer_chrome/displayNotHandle.html
@@ -23,11 +23,17 @@
 </head>
 <body>
 
-<div id="deleteAllDiv" style="background: aqua;right: 20%;float: right" title="delete all world don't click">
-    <button class="deleteButton" id="deleteAllButton" style="background: cornflowerblue; color: white"><img src="deleteall.png" style="max-width: 55px;max-height: 55px">  DELETE ALL, CAREFULE CLICK,删除所有谨慎点击</button>
+<div id="deleteAllDiv" style="background: aqua;position: absolute;bottom: 34px;right: 34px;text-align: center" title="delete all world don't click">
+    <button class="deleteButton" id="deleteAllButton" style="background: aqua; color: white;text-align: center;padding: 5px">
+        <img src="deleteall.png" style="max-width: 34px;max-height: 34px">
+    </button>
+    <br>
+    <p class="deleteButton"  style="padding:2px;background: aqua; color: red;font-size:10px;max-width: 128px;text-align: center"> DELETE ALL, CAREFULE CLICK,删除所有谨慎点击</p>
 </div>
+
 <div id="vocabularyNeedLearnSection">
 </div>
+
 
 </body>
 </html>
