--- a/words_discoverer_chrome/displayNotHandle.html
+++ b/words_discoverer_chrome/displayNotHandle.html
@@ -18,13 +18,51 @@
     }
 </style>
 <title>Your Not Handled Vocabulary</title>
+<script src="FileSaver.js"></script>
 <script src="common_lib.js"></script>
 <script src="black_white.js"></script>
+
+<script>
+    // Date.prototype.format = function(fmt) {
+    //     var o = {
+    //         "M+" : this.getMonth()+1,                 //月份
+    //         "d+" : this.getDate(),                    //日
+    //         "h+" : this.getHours(),                   //小时
+    //         "m+" : this.getMinutes(),                 //分
+    //         "s+" : this.getSeconds(),                 //秒
+    //         "q+" : Math.floor((this.getMonth()+3)/3), //季度
+    //         "S"  : this.getMilliseconds()             //毫秒
+    //     };
+    //     if(/(y+)/.test(fmt)) {
+    //         fmt=fmt.replace(RegExp.$1, (this.getFullYear()+"").substr(4 - RegExp.$1.length));
+    //     }
+    //     for(var k in o) {
+    //         if(new RegExp("("+ k +")").test(fmt)){
+    //             fmt = fmt.replace(RegExp.$1, (RegExp.$1.length==1) ? (o[k]) : (("00"+ o[k]).substr((""+ o[k]).length)));
+    //         }
+    //     }
+    //     return fmt;
+    // }
+    //
+    // var today = new Date();
+    //
+    // var time = today.format('yyyyMMdd_hh-mm-ss_S');
+    // console.log(time);
+
+</script>
+
 </head>
 <body>
+<div id="exportAllDiv" style="float: right;margin-right:34px;margin-top: 34px;text-align: center" title="数据导出">
+    <button class="deleteButton" id="exportAllButton" style=" color: white;text-align: center;padding: 5px">
+        <img src="export.png" style="max-width: 34px;max-height: 34px">
+    </button>
+    <br>
+    <p class="deleteButton"  style="padding:2px;background: aqua; color: red;font-size:10px;max-width: 128px;text-align: center"> Export Data</p>
+</div>
 
-<div id="deleteAllDiv" style="background: aqua;position: absolute;bottom: 34px;right: 34px;text-align: center" title="delete all world don't click">
-    <button class="deleteButton" id="deleteAllButton" style="background: aqua; color: white;text-align: center;padding: 5px">
+<div id="deleteAllDiv" style="position: absolute;bottom: 34px;right: 34px;text-align: center" title="delete all world don't click">
+    <button class="deleteButton" id="deleteAllButton" style=" color: white;text-align: center;padding: 5px">
         <img src="deleteall.png" style="max-width: 34px;max-height: 34px">
     </button>
     <br>
@@ -33,6 +71,8 @@
 
 <div id="vocabularyNeedLearnSection">
 </div>
+
+
 
 
 </body>
