update the html charset

--- a/words_discoverer_chrome/display.html
+++ b/words_discoverer_chrome/display.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-    body {
-        background-color: rgb(255,248,220);
-    }
-    .wordText {
-        font-size: 20px;
-        margin: 4px 6px;
-    }
-    .deleteButton {
-        background-color: rgb(255,248,220);
-        border: none;
-        padding: 2px;
-        margin: 4px 2px;
-        cursor: pointer;
-    }
-</style>
-<title>Your Vocabulary</title>
-<script src="FileSaver.js"></script>
-<script src="common_lib.js"></script>
-<script src="black_white.js"></script>
+    <meta charset="UTF-8">
+    <style>
+        body {
+            background-color: rgb(255,248,220);
+        }
+        .wordText {
+            font-size: 20px;
+            margin: 4px 6px;
+        }
+        .deleteButton {
+            background-color: rgb(255,248,220);
+            border: none;
+            padding: 2px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+    </style>
+    <title>Your Vocabulary</title>
+    <script src="FileSaver.js"></script>
+    <script src="common_lib.js"></script>
+    <script src="black_white.js"></script>
+    <script src="context_menu_lib.js"></script>
+    <script src="background.js"></script>
 </head>
 <body>
 
