--- a/words_discoverer_chrome/help.html
+++ b/words_discoverer_chrome/help.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-    body {
-        background-color: rgb(255,248,220);
-        padding: 4px 6px;
-        font-size: 16px;
-    }
-</style>
-<title>Words Discoverer: Description</title>
+  <meta charset="UTF-8">
+  <style>
+      body {
+          background-color: rgb(255,248,220);
+          padding: 4px 6px;
+          font-size: 16px;
+      }
+  </style>
+  <title>Words Discoverer: Description</title>
 </head>
 <body>
 <h2>Description</h2>
