--- a/words_discoverer_chrome/sync_help.html
+++ b/words_discoverer_chrome/sync_help.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-    body {
-        background-color: rgb(255,248,220);
-        padding: 4px 6px;
-        font-size: 16px;
-    }
+  <meta charset="UTF-8">
+  <style>
+      body {
+          background-color: rgb(255,248,220);
+          padding: 4px 6px;
+          font-size: 16px;
+      }
 
-    fieldset {
-        padding: 8px;
-        border: 0;
-        width: 700px;
-    }
+      fieldset {
+          padding: 8px;
+          border: 0;
+          width: 700px;
+      }
 
-</style>
-<title>Words Discoverer: Synchronization Info</title>
+  </style>
+  <title>Words Discoverer: Synchronization Info</title>
 </head>
 <body>
 
