--- a/words_discoverer_chrome/displayNotHandle.html
+++ b/words_discoverer_chrome/displayNotHandle.html
@@ -1,55 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-    body {
-        background-color: rgb(255,248,220);
-    }
-    .wordText {
-        font-size: 20px;
-        margin: 4px 6px;
-    }
-    .deleteButton {
-        background-color: rgb(255,248,220);
-        border: none;
-        padding: 2px;
-        margin: 4px 2px;
-        cursor: pointer;
-    }
-</style>
-<title>Your Not Handled Vocabulary</title>
-<script src="FileSaver.js"></script>
-<script src="common_lib.js"></script>
-<script src="black_white.js"></script>
-
-<script>
-    // Date.prototype.format = function(fmt) {
-    //     var o = {
-    //         "M+" : this.getMonth()+1,                 //月份
-    //         "d+" : this.getDate(),                    //日
-    //         "h+" : this.getHours(),                   //小时
-    //         "m+" : this.getMinutes(),                 //分
-    //         "s+" : this.getSeconds(),                 //秒
-    //         "q+" : Math.floor((this.getMonth()+3)/3), //季度
-    //         "S"  : this.getMilliseconds()             //毫秒
-    //     };
-    //     if(/(y+)/.test(fmt)) {
-    //         fmt=fmt.replace(RegExp.$1, (this.getFullYear()+"").substr(4 - RegExp.$1.length));
-    //     }
-    //     for(var k in o) {
-    //         if(new RegExp("("+ k +")").test(fmt)){
-    //             fmt = fmt.replace(RegExp.$1, (RegExp.$1.length==1) ? (o[k]) : (("00"+ o[k]).substr((""+ o[k]).length)));
-    //         }
-    //     }
-    //     return fmt;
-    // }
-    //
-    // var today = new Date();
-    //
-    // var time = today.format('yyyyMMdd_hh-mm-ss_S');
-    // console.log(time);
-
-</script>
+    <meta charset="UTF-8">
+    <style>
+        body {
+            background-color: rgb(255,248,220);
+        }
+        .wordText {
+            font-size: 20px;
+            margin: 4px 6px;
+        }
+        .deleteButton {
+            background-color: rgb(255,248,220);
+            border: none;
+            padding: 2px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+    </style>
+    <title>Your Not Handled Vocabulary</title>
+    <script src="FileSaver.js"></script>
+    <script src="common_lib.js"></script>
+    <script src="black_white.js"></script>
+    <script src="context_menu_lib.js"></script>
+    <script src="background.js"></script>
 
 </head>
 <body>
