fast the HTML load speed

--- a/words_discoverer_chrome/displayNotHandle.html
+++ b/words_discoverer_chrome/displayNotHandle.html
@@ -22,8 +22,8 @@
     <script src="FileSaver.js"></script>
     <script src="common_lib.js"></script>
     <script src="black_white.js"></script>
-    <script src="context_menu_lib.js"></script>
-    <script src="background.js"></script>
+    <!--<script src="context_menu_lib.js"></script>-->
+    <!--<script src="background.js"></script>-->
 
 </head>
 <body>
